[package]
name = "pixel_wfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
gloo-utils = "0.1.6"
js-sys = "0.3"
wasm-bindgen = "0.2.84"
yew = { version = "0.20", features = ["csr"] }
rand = "0.7"
yew-agent = "0.2.0"
serde = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
  "ImageBitmap",
]
